--- a/emacs/.emacs.d/configuration.org
+++ b/emacs/.emacs.d/configuration.org
@@ -310,7 +310,9 @@ accessible from anywhere:
     "g" '(magit-status :which-key "magit")
     "q" '(org-capture :which-key "capture")
     "ee" '(npg/visit-emacs-config :which-key "emacs config")
-    "ef" '(npg/visit-linux-config :which-key "linux config"))
+    "ef" '(npg/visit-linux-config :which-key "linux config")
+    "m" '(mu4e :which-key "mu4e")
+    "r" '(restart-emacs :which-key "restart"))
 #+end_src
 
 * Services
