--- a/emacs/.emacs.d/configuration.org
+++ b/emacs/.emacs.d/configuration.org
@@ -633,6 +633,35 @@ Note, however, that Org also uses these settings to show PDF previews.
   (use-package json-mode)
 #+end_src
 
+** XML
+nXML modes don't seem to come with a formatter, so let's [[http://blog.bookworm.at/2007/03/pretty-print-xml-with-emacs.html][use one]] from Benjamin
+Ferrari's excellent blog.
+#+begin_src emacs-lisp
+  (defun bf/format-xml-region (begin end)
+    "Pretty format XML markup in region. You need to have nxml-mode
+  http://www.emacswiki.org/cgi-bin/wiki/NxmlMode installed to do
+  this.  The function inserts linebreaks to separate tags that have
+  nothing but whitespace between them.  It then indents the markup
+  by using nxml's indentation rules."
+    (interactive "r")
+    (save-excursion
+        (nxml-mode)
+        (goto-char begin)
+        (while (search-forward-regexp "\>[ \\t]*\<" nil t)
+          (backward-char) (insert "\n"))
+        (indent-region begin end))
+      (message "nXML formatted"))
+#+end_src
+
+And let's bind the key in nXML mode; we need to standardize a formatting key
+anyhow.
+#+begin_src emacs-lisp
+  (general-define-key
+   :keymaps 'nxml-mode-map
+   :states '(normal motion)
+   "C-c C-r f" '(bf/format-xml-region :which-key "format region"))
+#+end_src
+
 * Org
 ** System
  We have already installed the Org package archive, so let's ensure we're using
