--- a/emacs/.emacs.d/configuration.org
+++ b/emacs/.emacs.d/configuration.org
@@ -264,6 +264,36 @@ Even though I have hard breaks set in text modes through =auto-fill-mode=,
 #+end_src
 
 * Navigation
+** Ivy
+I use =ivy= and =counsel= as my completion framework.
+
+This configuration:
+- Uses =counsel-M-x= for command completion,
+- Replaces =isearch= with =swiper=,
+- Uses =smex= to maintain history,
+- Enables fuzzy matching everywhere except swiper (where it's thoroughly
+  unhelpful), and
+- Includes recent files in the switch buffer.
+
+#+BEGIN_SRC emacs-lisp
+  (use-package counsel
+    :bind
+    ("M-x" . 'counsel-M-x)
+    ("C-s" . 'swiper)
+
+    :config
+    (use-package flx)
+    (use-package smex)
+
+    (ivy-mode 1)
+    (setq ivy-use-virtual-buffers t)
+    (setq ivy-count-format "(%d/%d) ")
+    (setq ivy-initial-inputs-alist nil)
+    (setq ivy-re-builders-alist
+          '((swiper . ivy--regex-plus)
+            (t . ivy--regex-fuzzy))))
+#+END_SRC
+
 ** =which-key=
 #+begin_src emacs-lisp
   (use-package which-key
@@ -272,6 +302,12 @@ Even though I have hard breaks set in text modes through =auto-fill-mode=,
     (setq which-key-idle-delay 0.2)
     :diminish which-key-mode
   )
+#+end_src
+
+** =hydra=
+I prefer =which-key=, but let's keep =hydra= around too for Ivy-specific stuff.
+#+begin_src emacs-lisp
+  (use-package ivy-hydra)
 #+end_src
 
 ** =evil=
